logs/jupylr.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/jupyLR'...
Compiling './lib/python3.5/site-packages/jupyLR/__init__.py'...
***   File "./lib/python3.5/site-packages/jupyLR/__init__.py", line 16
    print ''.join((indent, prefix, str(ast)))
           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jupyLR/automaton.py'...
***   File "./lib/python3.5/site-packages/jupyLR/automaton.py", line 36
    print "Error detected at line %i, column %i:" % (line, column)
                                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jupyLR/lr.py'...
***   File "./lib/python3.5/site-packages/jupyLR/lr.py", line 86
    return set(ifilter(lambda (r, i): not r or i, itemset))
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jupyLR/parser.py'...
***   File "./lib/python3.5/site-packages/jupyLR/parser.py", line 165
    return filter(lambda (i, t): len(self.ACTION[i][t]) > 1,
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jupyLR/stack.py'...
***   File "./lib/python3.5/site-packages/jupyLR/stack.py", line 8
    print pfx + '\n  ' + '\n  '.join(map(str, l))
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jupyLR/tokenizer.py'...
***   File "./lib/python3.5/site-packages/jupyLR/tokenizer.py", line 38
    except IndexError, ie:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/jupyLR-0.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
